Fixed editor.css overflow being... Ugly. Showing the vertical scrollbar when not needed.

--- a/src/styles/editor.css
+++ b/src/styles/editor.css
@@ -8,7 +8,7 @@ div.toc {
     border-radius:15px;
     padding-right:10px;
     max-height:86%;
-    overflow:hidden scroll
+    overflow:hidden auto
 }
   
 div.container, div.toc {
